fix over-spacing in contact and donate pages

--- a/css/donate.css
+++ b/css/donate.css
@@ -15,14 +15,14 @@
   margin-top: 100px;
 }
 
-.introduction-content{
+.introduction-content {
   width: 50%;
   margin: auto;
   text-align: center;
   transform: translateY(30vh);
 }
 
-.introduction-content button{
+.introduction-content button {
   height: 90px;
   width: 350px;
   border: none;
@@ -30,14 +30,14 @@
   border-radius: 8px;
 }
 
-.introduction-content a{
+.introduction-content a {
   font-size: 32px;
   color: #000000;
   text-decoration: none;
   font-weight: 600;
 }
 
-.introduction-content p{
+.introduction-content p {
   margin-top: 30px;
   color: white;
   font-size: 18px;
@@ -47,7 +47,7 @@
 /**** Donate section *********/
 /*****************************/
 .donate {
-  padding: 5% 200px;
+  padding: 1% 200px;
   text-align: center;
 }
 
@@ -134,42 +134,42 @@
 /*********************************************/
 @media screen and (max-width: 768px) {
   /* INTRODUCTION SECTION */
-  .introduction img{
+  .introduction img {
     width: 55px;
     height: 55px;
-}
+  }
 
-.introduction{
+  .introduction {
     width: 100%;
     height: calc(60vh - 80px);
     padding: 5% 5%;
     margin-top: 80px;
-}
+  }
 
-.introduction-content{
+  .introduction-content {
     width: 100%;
     margin: auto;
     text-align: center;
     transform: translateY(10vh);
-}
+  }
 
-.introduction-content button{
+  .introduction-content button {
     height: 50px;
     width: 70%;
     border: none;
     background-color: #fff;
     border-radius: 8px;
-}
+  }
 
-.introduction-content a{
+  .introduction-content a {
     font-size: 18px;
-}
+  }
 
-.introduction-content p{
+  .introduction-content p {
     margin-top: 30px;
     color: white;
     font-size: 16px;
-}
+  }
 
   /* DONATE SECTION */
   .donate {
@@ -185,7 +185,8 @@
 
   /* DONATE FORM SECTION */
   .donate-form {
-    padding: 5% 3%;
+    padding: 0 3%;
+    margin-top: -50px;
   }
 
   .donate-form .form-content {
